<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailedContactLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detailedContactImage"
        android:layout_width="134dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <TextView
        android:id="@+id/detailedContactName"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:text="@string/contact_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/detailedContactImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailedContactPhoneNum"
        android:layout_width="409dp"
        android:layout_height="25dp"
        android:text="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedContactImage" />

    <TextView
        android:id="@+id/detailedContactPhoneNum2"
        android:layout_width="409dp"
        android:layout_height="25dp"
        android:text="@string/second_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedContactPhoneNum" />

    <TextView
        android:id="@+id/detailedContactEmail"
        android:layout_width="409dp"
        android:layout_height="25dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedContactPhoneNum2" />

    <TextView
        android:id="@+id/detailedContactEmail2"
        android:layout_width="409dp"
        android:layout_height="25dp"
        android:text="@string/second_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedContactEmail" />

    <TextView
        android:id="@+id/detailedContactDescription"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedContactEmail2" />

</androidx.constraintlayout.widget.ConstraintLayout>