<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactListLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/contactImage"
        android:name="@string/contactlist_image"
        android:layout_width="90dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <TextView
        android:id="@+id/contactName"
        android:name="@string/contactlist_name"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="Name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contactImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactNum"
        android:name="@string/contactlist_number"
        android:layout_width="319dp"
        android:layout_height="30dp"
        android:text="Phone number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contactImage"
        app:layout_constraintTop_toBottomOf="@+id/contactName" />

</androidx.constraintlayout.widget.ConstraintLayout>